RefinedUser integration test added